Repeater delegates have no parent in Component.onCompleted

Task-number: QTBUG-22279

Change-Id: I5c0b4a9becfee06dfc4a52e546ad81fb0b6f238a
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>