src/declarative/items/qquickrepeater_p.h
@@ -95,6 +95,7 @@ protected:
 
 private Q_SLOTS:
     void createdItem(int index, QQuickItem *item);
+    void initItem(int, QQuickItem *item);
     void modelUpdated(const QDeclarativeChangeSet &changeSet, bool reset);
 
 private:
